fixed spacing stuff

--- a/front/src/pages/LoginPage/LoginPage.css
+++ b/front/src/pages/LoginPage/LoginPage.css
@@ -15,7 +15,7 @@
 .card {
     box-sizing: border-box;
     width: 600px;
-    height: 320px;
+    height: 345px;
     padding: 20px;
     background-color: #84A59D;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
